<resources>
    <string name="app_name">SQLDemo</string>
    <string name="CustomerName">Customer Name</string>
    <string name="CustomerAge">Age</string>
    <string name="ActiveCustomer">Active Customer</string>
    <string name="viewAll">view All</string>
    <string name="addValue">add</string>
    <string name="TestPool">Test Pool</string>
    <string name="ADDROUTE">ADD R</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="LadeFahrzeugdaten">Lade Fahrzeugdaten</string>
    <string name="LadeFahrerdaten">Lade Fahrerdaten</string>
    <string name="LadeSendungsdaten">Lade Sendungsdaten</string>
    <string name="FilterSendungsdaten">Filter Sendungsdaten</string>
    <string name="FahrzeugID">Fahrzeug ID:</string>
    <string name="BenutzerName">Benutzer Name</string>
    <string name="passwort">Passwort</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="LoadList">Lade Liste</string>
    <string name="DispoSendung">Dispo</string>
    <string name="LadeNdListe">Lade Liste</string>
    <string name="DeDispo">De Dispo</string>
    <string name="bestätigen">Bestätigen</string>
    <string name="GeneriereRoute">Generiere Route</string>
    <string name="FahrzeugId">Fahrzeug Id:</string>
</resources>
